--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,5 +9,15 @@ $font-weight-semibold: 600;
 $font-weight-regular: 400;
 
 //colours
+$primary-instock-black: #13182C;
+$primary-instock-indigo: #2E66E5;
+$primary-white: #FFFFFF;
+$secondary-slate: #5C667E;
+$secondary-cloud: #BDC5D5;
+$background-graphite: #232940;
+$background-light-grapy: #F7F8F9;
+$supporting-green: #158463;
+$supporting-red: #C94515;
+
 
 
